// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doing things with a selected region can destroy crops 1`] = `
Object {
  "crops": Object {
    "0": Object {
      "0": Array [
        Object {
          "cropId": "parsnip",
          "dateDestroyed": 0,
          "datePlanted": 0,
          "x": 0,
          "y": 0,
        },
      ],
      "1": Array [
        Object {
          "cropId": "parsnip",
          "dateDestroyed": 0,
          "datePlanted": 0,
          "x": 0,
          "y": 0,
        },
      ],
    },
    "1": Object {
      "0": Array [
        Object {
          "cropId": "parsnip",
          "dateDestroyed": 0,
          "datePlanted": 0,
          "x": 0,
          "y": 0,
        },
      ],
      "1": Array [
        Object {
          "cropId": "parsnip",
          "dateDestroyed": 0,
          "datePlanted": 0,
          "x": 0,
          "y": 0,
        },
      ],
    },
  },
  "isMouseDown": false,
  "mouseDownPosition": undefined,
  "mousePosition": Object {
    "left": 0,
    "top": 0,
    "x": 16,
    "y": 16,
  },
}
`;

exports[`doing things with a selected region can plant crops 1`] = `
Object {
  "crops": Object {
    "0": Object {
      "0": Array [
        Object {
          "cropId": "parsnip",
          "datePlanted": 0,
          "x": 0,
          "y": 0,
        },
      ],
      "1": Array [
        Object {
          "cropId": "parsnip",
          "datePlanted": 0,
          "x": 1,
          "y": 0,
        },
      ],
    },
    "1": Object {
      "0": Array [
        Object {
          "cropId": "parsnip",
          "datePlanted": 0,
          "x": 0,
          "y": 1,
        },
      ],
      "1": Array [
        Object {
          "cropId": "parsnip",
          "datePlanted": 0,
          "x": 1,
          "y": 1,
        },
      ],
    },
  },
  "isMouseDown": false,
  "mouseDownPosition": undefined,
  "mousePosition": Object {
    "left": 0,
    "top": 0,
    "x": 16,
    "y": 16,
  },
}
`;

exports[`renders the app without crashing 1`] = `
<div
  class="Farm"
>
  <div
    class="Farm--canvas-wrapper"
    style="transform:scale(1)"
  >
    <canvas
      class="Farm--canvas"
      height="1040"
      width="1280"
    />
  </div>
</div>
`;
